src/sass/components/_input-style.scss
:active,
:hover,
:focus {
  outline: 0;
  outline-offset: 0;
}

.container {
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;

  @include mobile {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  @include mini {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

/* Стили выпадающего списка*/
form {
  width: 100%;
  position: relative;
  display: flex;
}

/* поиск в выпадающем списке*/
input[id='myInput'] {
  padding-left: 10px;
  background-color: rgb(75, 73, 73);
  width: 210px;
  height: 30px;
  color: hsl(0, 4%, 70%);
  font-size: 16px;
  border: none;
  font-family: var(--main-font);
  font-size: 14px;
  line-height: 20px;
  text-align: start;
}
input[id='myInput']::placeholder {
  color: hsl(0, 4%, 70%);
}

.search-button__icon {
  position: relative;
  right: 40px;
  top: 15px;
  fill: var(--input-placeholder-footer);
  cursor: pointer;
}
.drop-button__icon {
  position: relative;
  right: 45px;
  fill: var(--input-placeholder-footer);
  cursor: pointer;
}

/* Стили инпута поиска  и кнопки выпадающего списка*/
.drop-btn,
.search-input-event {
  width: 270px;
  height: 40px;
  color: var(--input-placeholder-footer);
  border: none;
  cursor: pointer;
  background: var(--input-bgr-color);
  backdrop-filter: blur(20px);
  border-radius: 20px;
  padding-left: 30px;
  font-family: var(--main-font);
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  text-align: start;
}

.input-event {
  margin-right: 18px;

  @include mobile {
    margin-bottom: 25px;
    margin-right: 0;
  }
}

.search-input-event::placeholder {
  color: var(--input-placeholder-footer);
}

.dropdown-country {
  position: relative;
}

.dropdown-content {
  display: none;
}

.dropdown-content li {
  color: var(--input-placeholder-footer);
  padding: 15px 0 0 10px;
  text-decoration: none;
  display: block;
  cursor: pointer;
  font-family: var(--main-font);
  font-size: 14px;
  line-height: 20px;
  text-align: start;
}

.show {
  display: block;
  background: var(--input-bgr-color);
  backdrop-filter: blur(20px);
  position: absolute;
  left: 6%;
  border: none;
  cursor: pointer;
  background: var(--input-bgr-color);
  backdrop-filter: blur(20px);
  min-width: 238px;
  padding: 5px;

  height: 200px;
  overflow-y: scroll;
  z-index: 1;
}

.name-list {
  margin: 0;
  padding: 0;
}

